--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-      "experimentalDecorators": true,
+        "experimentalDecorators": true,
       "plugins": [
         {
-          "name": "typescript-deno-plugin"
+          "name": "typescript-deno-plugin",
+          "enable": true
         }
       ]
     }
